--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,7 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <script src="../src/assets/vue-button-script.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
